remove global text-align, css fix

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -3,7 +3,7 @@
   margin: auto;
   height: 350px;
   overflow: auto;
-  text-align: bold;
+  text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
 }
